# rc-ss

./: AGENTS.md  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml
backlog/: 1-core-protocol.md  2-radio-transport.md  3-transmitter-input.md  4-receiver-control.md  5-failsafe.md  6-trim-and-buttons.md  7-ci.md
core/: Cargo.toml  README.md
core/src/: lib.rs  radio.rs
receiver/: Cargo.toml
receiver/src/: main.rs
transmitter/: Cargo.toml
transmitter/src/: main.rs
