[workspace]
resolver = "2"
members = [
    "core",
    "receiver",
    "transmitter",
]

[workspace.package]
edition = "2021"
version = "0.1.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[workspace.dependencies]
rc-core = { path = "core" }
defmt = "1.0.1"
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32h2"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["defmt", "esp32h2", "unstable"] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { version = "0.9.0", features = ["defmt", "esp32h2"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = "2.1.1"
esp-ieee802154 = { git = "https://github.com/esp-rs/esp-ieee802154", default-features = false, features = ["esp32h2"] }
bitflags = { version = "2", default-features = false }
