[workspace]
resolver = "2"
members = [
    "core",
    "receiver",
    "transmitter",
]

[workspace.package]
edition = "2024"
version = "0.1.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[workspace.dependencies]
rc-core = { path = "core" }
defmt = "1.0.1"

esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", package="esp-bootloader-esp-idf", features = ["esp32h2"] }
esp-hal = {git = "https://github.com/esp-rs/esp-hal", package="esp-hal", features = ["defmt", "esp32h2", "unstable"] }
critical-section = {version="1.2.0"}
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", package="esp-hal-embassy", features = ["defmt", "esp32h2"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }
static_cell = "2.1.1"
esp-radio = { git = "https://github.com/esp-rs/esp-hal", package = "esp-radio", default-features = false, features=["ieee802154", "esp32h2", "unstable"] }
bitflags = { version = "2", default-features = false }
embassy-futures = "0.1.1"

# [patch.crates-io]
# esp-wifi-sys = { git = "https://github.com/stestagg/esp-wifi-sys", features=["esp32h2"]  }

