[package]
name = "receiver"
version = "0.1.0"
edition = "2021"
build = "../build.rs"

[dependencies]
rc-core = { workspace = true }
defmt = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
esp-hal = { workspace = true }
critical-section = { workspace = true }
embassy-executor = { workspace = true }
esp-hal-embassy = { workspace = true }
panic-rtt-target = { workspace = true }
rtt-target = { workspace = true }
static_cell = { workspace = true }
esp-alloc = { workspace = true }

